# agent-enforcer

./: .coverage  .gitignore  AGENTS.md  CONVENTIONS.md  LICENSE  ONTOLOGY.md  README.md  enforcer_config.py  lefthook.yml  pyproject.toml  scratch_violations.py
.github/workflows/: ci.yml  enforcer.yml  release.yml
docs/: brainstorm.md
enforcer/: __init__.py  check_context.py  check_runner.py  check_service.py  cli.py  concept_graph.py  config.py  context.py  csharp_imports.py  docs.py  explain.py  fix.py  git.py  glob_util.py  go_imports.py  ignore.py  import_graph.py  llm.py  matcher_tree.py  mcp_server.py  python_imports.py  reporter.py  rule.py  rule_view.py  runner.py  scratch_violations.py  ts_imports.py  types.py
enforcer/combinators/: __init__.py  core.py
enforcer/extractors/: __init__.py  core.py  csproj_props.py  env_file.py  ini_section_keys.py  json_keys.py  terraform_block.py  yaml_keys.py
enforcer/hooks/: commit-msg-hook
enforcer/matchers/: __init__.py  all_sorted.py  allowlist.py  always.py  architecture.py  ast_node.py  async_method.py  branch_name.py  canonical_import.py  char_count.py  comment_density.py  commit_message.py  concept_docstring.py  constant_naming.py  css_custom_property.py  css_literal_value.py  deep_import_barrier.py  doc_sync.py  docstring.py  duplicate_code.py  duplicate_rule_id.py  endpoint_auth.py  facade_exists.py  facade_exposes_interface.py  file_exists.py  function_complexity.py  graph_coverage.py  import_cycle.py  import_matcher.py  interface_check.py  invocation.py  keyset_sync.py  line_count.py  llm_check.py  magic_number.py  naming_convention.py  no_module_side_effects.py  ontology_sync.py  paired_file.py  path_pattern.py  (+5 more)
enforcer/parsers/: __init__.py  ast_utils.py  css_utils.py  language.py  tree_sitter.py
enforcer/predicates/: __init__.py  ast.py  combinators.py  core.py  int_compare.py  string_length.py  string_matches.py
enforcer_config/: __init__.py  arch_rules.py  git_rules.py  hygiene_rules.py  ontology_rules.py  self_enforce.py  style_rules.py  test_rules.py
examples/: asml_enforcer_config.py  aspnet_security.py  env_terraform_sync.py
scripts/: commit-msg-hook  post_pr_comments.py  pr_commenter.py  pre-commit-hook
tests/: conftest.py  test_asml_config_updates.py  test_ast_utils.py  test_bugfixes.py  test_change_context.py  test_check_context.py  test_check_runner.py  test_check_service.py  test_cli.py  test_cli_confirm_warnings.py  test_cli_docs.py  test_cli_explain.py  test_cli_fix.py  test_cli_ignore.py  test_cli_install.py  test_cli_output_containment.py  test_cli_refactor.py  test_concept_graph.py  test_config.py  test_confirm_warnings.py  test_context.py  test_csharp_imports.py  test_css_utils.py  test_dependency_injection.py  test_diff_awareness.py  test_docs.py  test_env_terraform_sync_example.py  test_examples_aspnet_security.py  test_exclude_globs.py  test_explain.py  test_file_context_status.py  test_fix.py  test_full_scan.py  test_git.py  test_glob_doublestar.py  test_glob_util.py  test_go_imports.py  test_ignore.py  test_import_graph.py  test_import_resolver_seam.py  (+21 more)
tests/fixtures/: sample.ts
tests/test_combinators/: test_all_of.py  test_any_of.py  test_combinator_needs.py  test_combinator_shared_ctx.py  test_nested_combinators.py  test_none_of.py  test_not.py  test_one_of.py  test_status_gate.py
tests/test_extractors/: test_core.py  test_csproj_props.py  (+5 more)
(+101 files in other folders)
