[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-commit-agent-enforcer"
version = "0.4.3"
description = "Deterministic convention enforcement for coding agents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Niclas Hulsmann"}]
requires-python = ">=3.11"
keywords = ["pre-commit", "convention", "linter", "agent", "code-quality"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "tree-sitter>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-css>=0.21",
    "tree-sitter-go>=0.21",
    "httpx>=0.27",
    "click>=8.1",
    "json-repair>=0.30",
]

[project.urls]
Homepage = "https://github.com/nhuelstng/agent-enforcer"
Repository = "https://github.com/nhuelstng/agent-enforcer"
Issues = "https://github.com/nhuelstng/agent-enforcer/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "PyYAML>=6.0",
]
mcp = ["mcp>=0.1"]

[project.scripts]
enforcer = "enforcer.cli:cli"

[tool.setuptools.packages.find]
include = ["enforcer*"]
exclude = ["enforcer_config*"]

[tool.setuptools.package-data]
"enforcer" = ["hooks/commit-msg-hook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
